change colour to a darker red to achieve AAA contrast (fix #47)

--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -67,7 +67,7 @@ $font: 'Lora', serif;
 $font--heading: 'Martin', sans-serif;
 $background: #fff;
 $text: #000;
-$accent: #d93920;
+$accent: #b01711;
 $anchors: #1c29a8;
 
 // Breakpoints
